@@ -7,6 +7,8 @@ Changes in progress
 ---------------------------------------------------------------------------------------
 - Added custom image for categories in page header (Trello #1054)
 - Themes reactor-primaria-1 and reactor-serveis-educatius: Minor format improvements in code
+- Intraweb Importer: Improved information text for users (Trello #1068)
+
 
 
 Changes 15.12.14
